# vision-impaired-glasses

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  config.yaml  downloadPiperVoice.sh  downloadWhisperModels.sh  glasses_start.sh  package.sh  test.raw
libs/: base64.cmake  cpr.cmake  espeak.cmake  libsdl.cmake  onnx.cmake  opencv.cmake  portaudio.cmake  pthread.cmake  spdlog.cmake  unialgo.cmake  whisper.cmake  yaml.cmake
package/: CMakeLists.txt  config.yaml  copyright
samples/: CMakeLists.txt  help.txt
src/: control_thread.cpp  control_thread.h  image_thread.cpp  image_thread.h  main.cpp  string_utils.h
src/audio/: audio_wrapper.cpp  audio_wrapper.h  espeak_wrapper.cpp  espeak_wrapper.h  whisper_wrapper.cpp  whisper_wrapper.h
src/config/: anyoption.cpp  anyoption.h  config.cpp  config.h
src/openai/: ai_wrapper.cpp  ai_wrapper.h
