set(CPACK_PACKAGE_DESCRIPTION "Vision Impaired Glasses")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Vision Impaired Glasses")
set(CPACK_PACKAGE_VENDOR "Dotstar Design")

SET(CPACK_PACKAGE_VERSION_MAJOR ${VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${VERSION_PATCH})

# .deb specific config
set(CPACK_GENERATOR "DEB")
set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
set(CPACK_DEBIAN_PACKAGE_CONTROL_STRICT_PERMISSION TRUE)
# This one is actually specific to debian
set(CPACK_PACKAGE_CONTACT "Matthew Warnes <matthew@dotstardesign.co.uk>")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "libasound2, portaudio2, libc6, libstdc++6")


include(CPack)

install(FILES copyright DESTINATION ${DOC_INSTALLATION_DEST})

install(
  FILES "${CMAKE_CURRENT_SOURCE_DIR}/config.yaml"
  PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ GROUP_WRITE WORLD_READ WORLD_WRITE
  DESTINATION "${DATA_INSTALLATION_DEST}"
)
